--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,18 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "Vanshika Chaudhary"
   uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+  email       : "f20vanshikac@iimdir.ac.in"
+  bio         : "I am an Economics PhD candidate."
   avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
+  twitter     : "Vanshik11233024"
   google_plus : "Name"
 
 Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
+  name        : "Vanshika Chaudhary"
+  email       : "f20vanshikac@iimidr.ac.in"
   bio         : "I ordered what?"
   avatar      : "bio-photo.jpg"
-  twitter     : "name2"
+  twitter     : "Vanshik11233024"
   google_plus : "Name"
