--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
-ch# The following is the order of the links in the header of the website.
+# The following is the order of the links in the header of the website.
 #
 # Changing the order here will adjust the order and you can also add additional
 # links. Removing a link prevents it from showing in the header, but does not
 # prevent it from being included in the site.
 
 main:
-  - title: "Research"
+  - title: "Publications"
     url: /publications/
 
   - title: "Talks"
@@ -14,6 +14,14 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
+  - title: "Portfolio"
+    url: /portfolio/
+        
+  - title: "Blog Posts"
+    url: /year-archive/
+    
   - title: "CV"
     url: /cv/
-
+    
+  - title: "Guide"
+    url: /markdown/
