--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : "she/her"  
   bio              : "Applied Microeconomist"
   location         : "India"
-  employer         : "Indian Institute of Management Indore"
+  employer         : "IIM Indore"
   uri              : # URL
   email            : "f20vanshikac@iimidr.ac.in" 
 
