--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ Name Name:
   uri         : "http://name.com"
   email       : "f20vanshikac@iimdir.ac.in"
   bio         : "I am an Economics PhD candidate."
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "Vanshika.jpg"
   twitter     : "Vanshik11233024"
   google_plus : "Name"
 
@@ -13,6 +13,6 @@ Name2 Name2:
   name        : "Vanshika Chaudhary"
   email       : "f20vanshikac@iimidr.ac.in"
   bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
+  avatar      : "Vanshika.jpg"
   twitter     : "Vanshik11233024"
   google_plus : "Name"
