--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Vanshika.png"
+  avatar           : "Vanshika.jpg"
   name             : "Vanshika Chaudhary"
   pronouns         : "she/her"  
   bio              : "Applied Microeconomist"
