--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,9 @@ main:
         
   - title: "CV"
     url: /cv/
+
+  - title: "References"
+    url: /references/
     
   #- title: "Meet the non-academic me"
     #url: /markdown/
