--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : "she/her"  
   bio              : "Applied Microeconomist"
   location         : "India"
-  employer         : ["IIM Indore"](https://iimidr.ac.in/wp-content/uploads/2025/03/f20Vanshikac.pdf) 
+  employer         : [IIM Indore](https://iimidr.ac.in/wp-content/uploads/2025/03/f20Vanshikac.pdf)
   uri              : #"https://iimidr.ac.in/wp-content/uploads/2025/03/f20Vanshikac.pdf"
   email            : "f20vanshikac@iimidr.ac.in" 
 
