--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   bio              : "Applied Microeconomist"
   location         : "India"
   employer         : "IIM Indore"
-  uri              : "https://iimidr.ac.in/wp-content/uploads/2025/03/f20Vanshikac.pdf"
+  uri              : "https://iimidr.ac.in/programmes/academic-programmes/doctoral-programme-in-management/"
   email            : "f20vanshikac@iimidr.ac.in" 
 
   # Academic websites
